// Copyright 2021 Monoskope Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// This file follows google's gRPC naming conventions:
// https://cloud.google.com/apis/design/naming_convention

option go_package = "github.com/finleap-connect/monoskope/pkg/api/domain/audit";

package audit;

// TODO
message UserOverview {
  // the name of the user
  string name = 1;
  // TODO
  string email = 2;
  // TODO
  string roles = 3;
  // TODO
  string tenants = 4;
  // TODO
  string clusters = 5;
  // TODO
  string details = 6;
}
